[package]
name = "svg-strip"
version = "0.1.0"
edition = "2021"
description = "A fast and aggressive SVG minification tool tailored for inline HTML and standalone use."
license = "MIT"
repository = "https://github.com/madLinux7/svg-strip"


[dependencies]
colored = "3.1.1"
lazy_static = "1.5.0"
regex = "1.12.3"
xml-rs = "1.0.0"
xmltree = "0.11"
